<resources>
    <string name="app_name">VallesVMCC</string>
    <string name="steps">Número de pasos</string>
    <string name="path">Secuencia</string>
    <string name="valley">Número Valles:</string>
    <string name="calcular">calcular</string>
    <string name="up">U</string>
    <string name="dowm">D</string>
    <string name="matriz">-9 -9 -9 1 1 1\n
0 -9 0 4 3 2\n
-9 -9 -9 1 2 3\n
0 0 8 6 6 0\n
0 0 0 -2 0 0\n
0 0 1 2 4 0\n</string>

</resources>